[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/world/entity/MovingEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/entity/entities/item/CollectibleItem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="CollectibleItem" instance=ExtResource( 1 )]
script = ExtResource( 2 )
collision_mode = 2

[node name="BodyShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="PlayerDetectionArea" type="Area2D" parent="." index="1"]
collision_layer = 0
collision_mask = 4

[node name="BodyShape" type="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
shape = SubResource( 1 )

[node name="LifeTimer" type="Timer" parent="." index="2"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="FlashTimer" type="Timer" parent="." index="3"]
wait_time = 0.1

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
